kubernetes/apps/open-webui/app.yaml
---
# Source: open-webui/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-webui
  namespace: open-webui
  labels:
    helm.sh/chart: open-webui-8.12.2
    app.kubernetes.io/version: "0.6.34"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: open-webui
    app.kubernetes.io/instance: openwebui
    app.kubernetes.io/component: open-webui
spec:
  selector:
    app.kubernetes.io/instance: openwebui
    app.kubernetes.io/component: open-webui
  type: ClusterIP
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: http
---
# Source: open-webui/templates/workload-manager.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: open-webui
  namespace: open-webui
  labels:
    helm.sh/chart: open-webui-8.12.2
    app.kubernetes.io/version: "0.6.34"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: open-webui
    app.kubernetes.io/instance: openwebui
    app.kubernetes.io/component: open-webui

spec:
  replicas: 1
  serviceName: open-webui
  selector:
    matchLabels:
      app.kubernetes.io/instance: openwebui
      app.kubernetes.io/component: open-webui
  template:
    metadata:
      labels:
        helm.sh/chart: open-webui-8.12.2
        app.kubernetes.io/version: "0.6.34"
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: open-webui
        app.kubernetes.io/instance: openwebui
        app.kubernetes.io/component: open-webui
    spec:
      enableServiceLinks: false
      automountServiceAccountToken: false
      serviceAccountName: existing-sa
      containers:
        - name: open-webui
          image: ghcr.io/open-webui/open-webui:0.6.34
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: data
              mountPath: /app/backend/data
          tty: true
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: open-webui
